Change to JUnit and add beginings of AS7 tests